# luckfox_pico_rtsp_opencv

./: CMakeLists.txt  README.md  README_CN.md
include/: luckfox_mpi.h
include/opencv4/opencv2/: cvconfig.h
lib/: libdrm.so.2.4.0  libdrm_rockchip.so.1  libdrm_rockchip.so.1.0.0
lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules.cmake
lib/pkgconfig/: libdrm_rockchip.pc
luckfox_rtsp_opencv_demo/: luckfox_rtsp_opencv
media_out/include/: libRkScalerApi.h
media_out/lib/: libdrm_rockchip.la  libkms.so.1.0.0
src/: luckfox_mpi.cc  main.cc  rtsp_opencv.cc
